# fastapi_forge

./: .env  .env.dev  Dockerfile  README.md  docker-compose.yml  entrypoint.py  pyproject.toml
alembic/: env.py
app/: main.py
app/api/v1/controllers/config/: api.py  settings.py
app/api/v1/controllers/config/database/: config.py
app/api/v1/controllers/config/database/models/: schema.py
app/api/v1/controllers/routers/main/: docs.py  health.py  index.py  memory.py
app/api/v1/controllers/routers/security/: refresh_token.py
app/api/v1/controllers/routers/user/: login.py  logout.py  signup.py
app/api/v1/models/: Login.py  Logout.py  Token.py  User.py
app/api/v1/service/auth/: access_cookie.py  decorator.py  rate_limit.py  service.py
app/api/v1/test/: conftest.py
app/api/v1/test/unit/routers/main/: test_ping.py  test_scalar.py
app/api/v1/utils/: encodehost.py  get_ip.py  logging.py  token_gen.py
app/api/v1/worker/: base.py  enqueue.py  settings.py
app/config/handlers/: config.py
app/config/middleware/: config.py  redis.py
app/config/middleware/ratelimit/: config.py
app/v1/controllers/config/: api.py
app/v1/controllers/routers/main/: index.py
app/v1/models/: base.py
app/v1/service/webhook/: config.py  type.py
app/v1/test/: pytest.ini
app/v1/test/unit/: test_endpoints.py
app/v1/test/unit/routers/main/: test_memory.py  test_root.py
app/v1/utils/: file_size.py
infra/: docker-compose.yml
